--- a/src/style.css
+++ b/src/style.css
@@ -58,7 +58,6 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
   width: 100%;
   padding: 2rem;
   text-align: center;
@@ -78,4 +77,8 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+input,
+select {
+  width: max-content;
 }
